--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="lebenslauf.pdf" class="button"><i class="fa fa-download"></i>Lebenslauf</a>
+                     <a href="lebenslauf" class="button"><i class="fa fa-download"></i>Lebenslauf</a>
                   </p>
                </div>
             </div> <!-- end row -->
